# end2endARMcontrol

./: README.md  README_cn.md
ros2_cloud_tools-bbox/: README.md
ros2_cloud_tools-bbox/aliyun_asr_node/: CHANGELOG.md  README.md  README_CN.md  package.xml  setup.cfg  setup.py
ros2_cloud_tools-bbox/aliyun_asr_node/aliyun_asr_node/: asr_node.py  test_mic.py
ros2_cloud_tools-bbox/aliyun_tts_node/: README.md  README_CN.md  package.xml  setup.cfg  setup.py
ros2_cloud_tools-bbox/aliyun_tts_node/aliyun_tts_node/: aliyun_tts_node.py
ros2_cloud_tools-bbox/qwen_agent_node/: README.md  README_CN.md  package.xml  setup.cfg  setup.py
ros2_cloud_tools-bbox/qwen_agent_node/qwen_agent_node/: MyTools.py  QwenLangchain.py  __init__.py  image_publisher.py  qwen_agent_node.py
soarm/: check_system.py  start_readme.md
soarm/lerobot-kinematics-main/: =1.1.5  pyproject.toml
soarm/lerobot-kinematics-main/UNKNOWN.egg-info/: SOURCES.txt
soarm/lerobot-kinematics-main/examples/: lerobot_keycon_gpos_real.py  main_follower copy.json
soarm/lerobot-kinematics-main/lerobot_kinematics/lerobot/: lerobot_Kinematics.py
soarm/mono_mobilesam/include/: mobilesam_node.h
soarm/mono_mobilesam/launch/: realsense_sam.launch.py
soarm/mono_mobilesam/src/: mobilesam_node.cpp
soarm/object_detector_pkg/: package.xml  setup.cfg  setup.py
soarm/object_detector_pkg/install/: local_setup.sh  setup.sh
soarm/object_detector_pkg/install/object_detector_pkg/lib/object_detector_pkg/: arm_controller  object_detector  test_arm_actions
soarm/object_detector_pkg/install/object_detector_pkg/share/object_detector_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
soarm/object_detector_pkg/install/object_detector_pkg/share/object_detector_pkg/config/: arm_actions.yaml
soarm/object_detector_pkg/install/object_detector_pkg/share/object_detector_pkg/scripts/: test_arm_actions.py
soarm/object_detector_pkg/launch/: complete_system_launch.py  full_system_launch.py
soarm/object_detector_pkg/log/: latest_build
