<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aliyun_asr_node</name>
  <version>0.1.0</version>
  <description>This Package use Aliyun Paraformer to provide ASR service.
  Once the node is started, it will continue to listen until a sentence is recognized and published as text.
   </description>
  <maintainer email="oplin@oplin.cn">OPlin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
