<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qwen_agent_node</name>
  <version>1.0.0</version>
  <description>This Package use Aliyun Qwen LLM and LangChain.
   </description>
  <maintainer email="oplin@oplin.cn">OPlin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Python 第三方库 -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>dashscope</exec_depend>
  <exec_depend>langchain</exec_depend>
  <exec_depend>langchain-community</exec_depend>
  <exec_depend>ai_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
